testsuite/tests/explicit-dicts/should_fail/Roles4.stderr

Roles4.hs:13:6: error:
    • Explicit dictionary application to: ‘Ord a’
      is not allowed because of instance incoherence:
      In ‘f a -> Set (f a) -> Set (f a)’
        Type variable ‘a’ has role Nominal
    • In the expression:
        (undefined :: Ord a => f a -> Set (f a) -> Set (f a))
          ((reverseOrd @(Maybe Int) :: Ord a))
      In an equation for ‘f4’:
          f4
            = (undefined :: Ord a => f a -> Set (f a) -> Set (f a))
                ((reverseOrd @(Maybe Int) :: Ord a))
